# NLP_resume_analyzer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DETAILED_EXPLANATION.md  DOCUMENTATION.md  Dockerfile  README.md  RENDER_DEPLOY.md  TROUBLESHOOTING.md  build.sh  build_frontend.sh  build_render.sh  deploy.sh  docker-compose.yml  fix_build.py  install_spacy_model.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  start.sh  start_app.py  test_docker.sh
backend/: Dockerfile  build.sh  build_render.sh  requirements.txt
backend/app/: __init__.py  ai_analyzer.py  jd_analyzer.py  main.py  simple_tfidf.py  tfidf_analyzer.py
backend/utils/output/: .gitkeep
frontend/: Dockerfile  streamlit_app.py
