[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-job-assistant"
version = "1.0.0"
description = "AI-Powered Job Assistant with custom TF-IDF implementation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "openai==1.3.7",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pypdf2==3.0.1",
    "pdfplumber==0.10.3",
    "nltk==3.8.1",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "python-dateutil==2.8.2",
    "streamlit==1.28.1",
    "altair==5.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]
